--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Our Diary</string>
-    <string name="file_provider">com.zdgeier.ourdiary.fileprovider</string>
+    <string name="app_name">OurDiary</string>
+
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -23,11 +23,7 @@
     <string name="subtext">Subtitle here</string>
     <string name="action_1">Action 1</string>
     <string name="action_2">Action 2</string>
-    <string name="expanded_supporting">I\'m a thing. But, like most politicians, he promised more than he could deliver.
-        You won\'t have time for sleeping, soldier, not with all the bed making you\'ll be doing. Then we\'ll go with
-        that data file! Hey, you add a one and two zeros to that or we walk! You\'re going to do his laundry? I\'ve got
-        to find a way to escape.
-    </string>
+    <string name="expanded_supporting">I\'m a thing. But, like most politicians, he promised more than he could deliver. You won\'t have time for sleeping, soldier, not with all the bed making you\'ll be doing. Then we\'ll go with that data file! Hey, you add a one and two zeros to that or we walk! You\'re going to do his laundry? I\'ve got to find a way to escape.</string>
 
     <string name="dear_diary">Dear Diary</string>
     <string name="done">Done!</string>
